<resources>
    <string name="app_name">GetirHackathon</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_getir_maps">Map</string>
    <string name="start">Start </string>
    <string name="endTime">Ending Time </string>
    <string name="endDay">Ending Day</string>
    <string name="startingTime">Starting Time</string>
    <string name="startingDay">Starting Day</string>
    <string name="title_activity_group_maps">Map</string>
    <string name="groupList">Group List</string>
    <string name="join">Join</string>
    <string name="starting">Start : </string>
    <string name="ending"> Finish : </string>
    <string name="very_close">Very Close</string>
    <string name="group_location">Group Location</string>
    <string name="your_location">Your Location</string>
    <string name="no_connection">Check Your Wi-Fi connection</string>
    <string name="joined_succesfully">You have joined succesfully</string>
    <string name="custom_error">The connection with the server was lost.</string>
    <string name="ooops">Ooops !</string>
    <string name="error_text">Something went wrong.\nWould you like to try again</string>
    <string name="refresh">Try Again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_list">Seçmiş olduğunuz aralıkta bulunan gruplar</string>
    <string name="my_groups">My Groups</string>
    <string name="title_activity_event_groups">EventGroupsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_groups">Açtığınız Gruplar</string>
    <string name="partipiated_groups">Gruplarınız</string>
</resources>
