<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/pnl_error_screen"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="#C2C2C2"
    android:visibility="gone"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/ooops"
        android:layout_alignParentTop="true"
        android:background="@color/transparent_black"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:paddingTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/img_error_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        app:srcCompat="@drawable/warning"/>

    <TextView
        android:id="@+id/txt_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/error_text"
        android:background="@color/transparent_black"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/img_error_page"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/pnl_chat_options_move"
        android:background="@drawable/style_try_again"
        style="@style/CustomErrorLinearLayout"
        android:layout_below="@id/txt_error_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/refresh"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/ic_refresh" />

    </LinearLayout>
</RelativeLayout>